--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -738,21 +738,31 @@
                                     <rect key="frame" x="0.0" y="0.0" width="600" height="74"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Расписание работы" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.29999999999999999" translatesAutoresizingMaskIntoConstraints="NO" id="tJx-QK-y3L">
-                                            <rect key="frame" x="10" y="10" width="580" height="54"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Расписание работы" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tJx-QK-y3L">
+                                            <rect key="frame" x="25" y="8" width="444" height="54"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                             <color key="textColor" red="0.59999999999999998" green="0.5607843137254902" blue="0.23921568627450979" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Время" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U79-lH-cql">
+                                            <rect key="frame" x="479" y="8" width="106" height="54"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                            <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="tJx-QK-y3L" firstAttribute="top" secondItem="63r-Ny-AmT" secondAttribute="top" constant="10" id="2xa-Wj-wuA"/>
-                                        <constraint firstAttribute="trailing" secondItem="tJx-QK-y3L" secondAttribute="trailing" constant="10" id="fiX-XK-gVK"/>
-                                        <constraint firstAttribute="bottom" secondItem="tJx-QK-y3L" secondAttribute="bottom" constant="10" id="hnn-8C-RSq"/>
-                                        <constraint firstItem="tJx-QK-y3L" firstAttribute="leading" secondItem="63r-Ny-AmT" secondAttribute="leading" constant="10" id="vPU-hq-Yw6"/>
+                                        <constraint firstItem="tJx-QK-y3L" firstAttribute="top" secondItem="63r-Ny-AmT" secondAttribute="top" constant="8" id="2xa-Wj-wuA"/>
+                                        <constraint firstItem="U79-lH-cql" firstAttribute="leading" secondItem="tJx-QK-y3L" secondAttribute="trailing" constant="10" id="6mm-3F-vKj"/>
+                                        <constraint firstItem="U79-lH-cql" firstAttribute="top" secondItem="63r-Ny-AmT" secondAttribute="top" constant="8" id="AHo-fv-ZZi"/>
+                                        <constraint firstAttribute="trailing" secondItem="U79-lH-cql" secondAttribute="trailing" constant="15" id="CoO-Wt-r6A"/>
+                                        <constraint firstAttribute="bottom" secondItem="U79-lH-cql" secondAttribute="bottom" constant="12" id="cV6-W7-GFJ"/>
+                                        <constraint firstAttribute="bottom" secondItem="tJx-QK-y3L" secondAttribute="bottom" constant="12" id="hnn-8C-RSq"/>
+                                        <constraint firstItem="tJx-QK-y3L" firstAttribute="leading" secondItem="63r-Ny-AmT" secondAttribute="leading" constant="25" id="vPU-hq-Yw6"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
+                                    <outlet property="scheduleDayTIme" destination="U79-lH-cql" id="C8t-8B-Y43"/>
                                     <outlet property="sheduleDayText" destination="tJx-QK-y3L" id="kMa-Qp-9VB"/>
                                 </connections>
                             </tableViewCell>
