more constraints and stuff

--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -152,41 +152,65 @@
                         <viewControllerLayoutGuide type="top" id="yZV-p2-cH5"/>
                         <viewControllerLayoutGuide type="bottom" id="hgR-SH-9Yd"/>
                     </layoutGuides>
-                    <scrollView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" id="oZy-H3-Pk0">
+                    <scrollView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="oZy-H3-Pk0">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Y0A-fq-QVp">
-                                <rect key="frame" x="150" y="72" width="300" height="300"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Y0A-fq-QVp">
+                                <rect key="frame" x="175" y="128" width="250" height="250"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="250" id="bEh-zr-S4L"/>
                                     <constraint firstAttribute="height" constant="250" id="cy7-OG-194"/>
                                 </constraints>
                             </imageView>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AlK-7T-amV" userLabel="Specials Full Description Background">
-                                <rect key="frame" x="180" y="236" width="240" height="128"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <view alpha="0.20000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VPA-4q-BR7" userLabel="Specials Name Back">
+                                <rect key="frame" x="0.0" y="386" width="600" height="60"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="600" id="014-z2-YYN"/>
+                                </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="fullDescriptionLabel" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rHO-Xq-4mS">
-                                <rect key="frame" x="150" y="465" width="300" height="64"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nameLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ZFQ-5g-lQU">
+                                <rect key="frame" x="0.0" y="386" width="600" height="60"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VPA-4q-BR7" userLabel="Specials Name Background">
-                                <rect key="frame" x="180" y="236" width="240" height="128"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <view alpha="0.20000000000000001" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AlK-7T-amV" userLabel="Specials Full Description Back">
+                                <rect key="frame" x="0.0" y="466" width="600" height="39"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="600" id="dBJ-nO-y0j"/>
+                                </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="nameLabel" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZFQ-5g-lQU">
-                                <rect key="frame" x="150" y="403" width="300" height="31"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fullDescriptionLabel" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="rHO-Xq-4mS">
+                                <rect key="frame" x="0.0" y="466" width="600" height="39"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="AlK-7T-amV" firstAttribute="top" secondItem="VPA-4q-BR7" secondAttribute="bottom" constant="20" id="7cW-84-QWa"/>
+                            <constraint firstAttribute="trailing" secondItem="AlK-7T-amV" secondAttribute="trailing" id="7ge-nC-zPV"/>
                             <constraint firstItem="Y0A-fq-QVp" firstAttribute="top" secondItem="yZV-p2-cH5" secondAttribute="bottom" id="APB-A4-kPh"/>
+                            <constraint firstItem="ZFQ-5g-lQU" firstAttribute="width" secondItem="VPA-4q-BR7" secondAttribute="width" id="JeN-bD-qAx"/>
+                            <constraint firstItem="VPA-4q-BR7" firstAttribute="top" secondItem="Y0A-fq-QVp" secondAttribute="bottom" constant="8" id="PQ0-u7-plD"/>
+                            <constraint firstItem="rHO-Xq-4mS" firstAttribute="trailing" secondItem="AlK-7T-amV" secondAttribute="trailing" id="QiS-lU-hnT"/>
                             <constraint firstItem="Y0A-fq-QVp" firstAttribute="centerX" secondItem="oZy-H3-Pk0" secondAttribute="centerX" id="SKX-na-VC4"/>
+                            <constraint firstItem="ZFQ-5g-lQU" firstAttribute="top" secondItem="VPA-4q-BR7" secondAttribute="top" id="U2c-fB-J3f"/>
+                            <constraint firstItem="rHO-Xq-4mS" firstAttribute="leading" secondItem="AlK-7T-amV" secondAttribute="leading" id="WTJ-Gu-bS7"/>
+                            <constraint firstItem="ZFQ-5g-lQU" firstAttribute="bottom" secondItem="VPA-4q-BR7" secondAttribute="bottom" id="ZE7-oO-he4"/>
+                            <constraint firstItem="ZFQ-5g-lQU" firstAttribute="leading" secondItem="VPA-4q-BR7" secondAttribute="leading" id="aTM-KW-WbE"/>
+                            <constraint firstAttribute="trailing" secondItem="VPA-4q-BR7" secondAttribute="trailing" id="cVW-aF-5DJ"/>
+                            <constraint firstItem="rHO-Xq-4mS" firstAttribute="width" secondItem="AlK-7T-amV" secondAttribute="width" id="hqe-cR-guF"/>
+                            <constraint firstItem="rHO-Xq-4mS" firstAttribute="top" secondItem="AlK-7T-amV" secondAttribute="top" id="itL-Uz-eDl"/>
+                            <constraint firstItem="Y0A-fq-QVp" firstAttribute="centerX" secondItem="VPA-4q-BR7" secondAttribute="centerX" id="ita-uv-7A6"/>
+                            <constraint firstItem="AlK-7T-amV" firstAttribute="leading" secondItem="oZy-H3-Pk0" secondAttribute="leading" id="lZa-bS-wBr"/>
+                            <constraint firstAttribute="bottom" secondItem="AlK-7T-amV" secondAttribute="bottom" id="lcy-yu-ojn"/>
+                            <constraint firstItem="VPA-4q-BR7" firstAttribute="leading" secondItem="oZy-H3-Pk0" secondAttribute="leading" id="nlV-jl-DED"/>
+                            <constraint firstItem="rHO-Xq-4mS" firstAttribute="bottom" secondItem="AlK-7T-amV" secondAttribute="bottom" id="q5L-3H-PRh"/>
+                            <constraint firstItem="ZFQ-5g-lQU" firstAttribute="trailing" secondItem="VPA-4q-BR7" secondAttribute="trailing" id="yZJ-lg-ST4"/>
                         </constraints>
                     </scrollView>
                     <navigationItem key="navigationItem" id="uL2-eE-0ib">
@@ -1200,7 +1224,7 @@
                                     <constraint firstAttribute="width" constant="600" id="O5t-Hn-9OU"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iL3-Mp-4HZ">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="iL3-Mp-4HZ">
                                 <rect key="frame" x="0.0" y="258" width="600" height="60"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="50"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -1216,7 +1240,7 @@
                                     <constraint firstAttribute="width" constant="600" id="tAQ-sq-Sva"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vqd-2F-Y3D">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="vqd-2F-Y3D">
                                 <rect key="frame" x="0.0" y="338" width="600" height="48"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -1232,7 +1256,7 @@
                                     <constraint firstAttribute="width" constant="600" id="U64-rf-nB6"/>
                                 </constraints>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UO4-76-goO">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="UO4-76-goO">
                                 <rect key="frame" x="0.0" y="403" width="600" height="39"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                 <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
@@ -1254,13 +1278,11 @@
                             <constraint firstItem="iL3-Mp-4HZ" firstAttribute="top" secondItem="TEx-HB-hvx" secondAttribute="top" id="ONm-MU-0nB"/>
                             <constraint firstItem="iL3-Mp-4HZ" firstAttribute="width" secondItem="TEx-HB-hvx" secondAttribute="width" id="Qm8-m5-Fmq"/>
                             <constraint firstItem="TEx-HB-hvx" firstAttribute="top" secondItem="uaZ-NU-47g" secondAttribute="bottom" constant="8" id="Rat-ZF-5wG"/>
-                            <constraint firstItem="TEx-HB-hvx" firstAttribute="top" secondItem="uaZ-NU-47g" secondAttribute="bottom" constant="8" id="Rro-Lh-E56"/>
                             <constraint firstAttribute="trailing" secondItem="FRV-b0-XMJ" secondAttribute="trailing" id="TJU-v2-FR5"/>
                             <constraint firstItem="iL3-Mp-4HZ" firstAttribute="bottom" secondItem="TEx-HB-hvx" secondAttribute="bottom" id="WYN-i3-yvg"/>
                             <constraint firstItem="TEx-HB-hvx" firstAttribute="centerX" secondItem="uaZ-NU-47g" secondAttribute="centerX" id="dHJ-oz-8qH"/>
                             <constraint firstItem="UO4-76-goO" firstAttribute="width" secondItem="JPi-ft-dW5" secondAttribute="width" id="e62-fQ-4lG"/>
                             <constraint firstAttribute="bottom" secondItem="JPi-ft-dW5" secondAttribute="bottom" id="eCm-62-MDC"/>
-                            <constraint firstItem="FRV-b0-XMJ" firstAttribute="top" secondItem="TEx-HB-hvx" secondAttribute="bottom" constant="20" id="k4h-ut-DyB"/>
                             <constraint firstAttribute="trailing" secondItem="JPi-ft-dW5" secondAttribute="trailing" id="kHX-6i-7AY"/>
                             <constraint firstItem="JPi-ft-dW5" firstAttribute="top" secondItem="FRV-b0-XMJ" secondAttribute="bottom" constant="17" id="l5I-Nf-npP"/>
                             <constraint firstItem="uaZ-NU-47g" firstAttribute="top" secondItem="rPe-G4-csc" secondAttribute="top" id="ql6-mG-S81"/>
